# regroup-bodies

./: CMakeLists.txt  README.md
include/regroup/: regroup.cpp  regroup.hpp
json_sample_files/: 1_sample_in.json
json_samples/: 2_sample_in.json  example.json
src/: CMakeLists.txt  main.cpp
